--- a/.github/workflows/oidc.yaml
+++ b/.github/workflows/oidc.yaml
@@ -7,6 +7,7 @@ on:
 jobs:
   oidc:
     runs-on: ubuntu-latest
+    environment: production
     permissions:
       contents: 'write'
       id-token: 'write'
